--- a/client/index.html
+++ b/client/index.html
@@ -5,9 +5,17 @@
     <link rel="stylesheet" href="index.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sagitta</title>
+    <script>
+      // On page load or when changing themes, best to add inline in `head` to avoid FOUC
+      if (localStorage.getItem('color-theme') === 'dark' || (!('color-theme' in localStorage) && window.matchMedia('(prefers-color-scheme: dark)').matches)) {
+          document.documentElement.classList.add('dark');
+      } else {
+          document.documentElement.classList.remove('dark')
+      }
+  </script>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root" class="container mx-auto text-center"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
